# Kafkalearn-backend

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  final_cleanup.py  fix_imports.py  fix_specific_files.py  fix_timestamp_mixin.py  force_ingest.py  generate_memory_for_135.py  inject_fake_memory.py  pyproject.toml  replace_timestamp_mixin.py  setup_memory_data.py  test_admin_epreuves.py  test_batch_ingest.py  test_calendar.py  test_calendar_extended.py  test_delete.py  test_epreuves.py  test_ingest_memory.py  test_library_exploration.py  test_llm_config.py  test_memory_admin.py  test_memory_api.py  test_performance.py  test_personal_plan_delete.py  test_playlists.py  test_playlists_full.py  test_referral.py  test_reports.py  test_routes.py  test_skills.py  test_timetable_delete.py  update_schema.py
app/: celery_worker.py  main.py
docs/: MIGRATION_GRAPH_COGNITIF.md
files/: 1ère Séq SVTEEHB 2nde A (Mongo Beti)_2019-1.docx  4ème Séq SVTEEHB 6è suz4.docx  ASSA. CORRIGE EPREUVE GEO PROB STT.docx  BEPC Espa 2020 EPREUVE ZERO.doc  BEPC Session 2020 ESP.doc  Bac Espagnol A4-ABI- A5 LVII - A2- SES Epreuve zéro 2021.doc  CC N°3 pour 4eme LE PETIT ROUSSEAU-converti (1).docx  COURS D'HISTOIRE 3ème APC-1-3-1.docx  COURS DE SVT CLASSE DE 2nde.doc  COURS DE SVT CLASSE DE Tle C.doc  COURS QHSE 1ère A TI.docx  COURS SANTE-HYG-SEC-ENV 3è ET 4èANNEES TECHNIQUES-3.docx  COURS_5eme 2018_2019.docx  COVAL TERMINAL CD  TD CHIMIE 2024.docx  Chimie Pratique.docx  Correction_épreuve_zéro_pratique_de_physique_au_baccalauréat_C_2022.mht  DS 3 TleD2 chimie théo 2022-2023.docx  (+97 more)
(+518 files in other folders)
