[project]
name = "kafkalearn-backend"
version = "0.1.0"
description = "Backend API pour la plateforme KafkaLearn"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiosmtplib>=3.0.0",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.5.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "argon2-cffi>=25.1.0",
    "tenacity>=8.2.0",
    "celery[redis]>=5.3.0",
    "google-generativeai>=0.8.0",
    "fastembed>=0.4.0",
    "reportlab>=4.0.0",
    "meilisearch>=0.31.0",
    "pyvespa>=0.45.0",
    "firebase-admin>=6.5.0",
    "asyncpg>=0.31.0",
]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
